style.css
/* ... */
#item5-3:active ~ .crossword-clues .crossword-clues__list-item--down-1,
#item5-3:focus ~ .crossword-clues .crossword-clues__list-item--down-1,
#item5-3:hover ~ .crossword-clues .crossword-clues__list-item--down-1 {
  background: #FFFF74;
}

#item6-3:active ~ .crossword-clues .crossword-clues__list-item--down-1,
#item6-3:focus ~ .crossword-clues .crossword-clues__list-item--down-1,
#item6-3:hover ~ .crossword-clues .crossword-clues__list-item--down-1 {
  background: #FFFF74;
}

#item7-3:active ~ .crossword-clues .crossword-clues__list-item--down-1,
#item7-3:focus ~ .crossword-clues .crossword-clues__list-item--down-1,
#item7-3:hover ~ .crossword-clues .crossword-clues__list-item--down-1 {
  background: #FFFF74;
}

#item8-3:active ~ .crossword-clues .crossword-clues__list-item--down-1,
#item8-3:focus ~ .crossword-clues .crossword-clues__list-item--down-1,
#item8-3:hover ~ .crossword-clues .crossword-clues__list-item--down-1 {
  background: #FFFF74;
}

#item9-3:active ~ .crossword-clues .crossword-clues__list-item--down-1,
#item9-3:focus ~ .crossword-clues .crossword-clues__list-item--down-1,
#item9-3:hover ~ .crossword-clues .crossword-clues__list-item--down-1 {
  background: #FFFF74;
}


#item4-1:valid ~ #item4-2:valid ~ #item4-3:valid ~ #item4-4:valid ~ #item4-5:valid ~ #item4-6:valid ~ {
  background: #9AFF67;
}


#item1-3:valid ~ #item2-3:valid ~ #item3-3:valid ~ #item4-3:valid ~ #item5-3:valid ~ #item6-3:valid ~ #item7-3:valid ~ #item8-3:valid ~ #item9-3:valid ~ {
  background: #9AFF67;
}

 
#item4-1:valid ~ #item4-2:valid ~ #item4-3:valid ~ #item4-4:valid ~ #item4-5:valid ~ #item4-6:valid ~ #item1-3:valid ~ #item2-3:valid ~ #item3-3:valid ~ #item5-3:valid ~ #item6-3:valid ~ #item7-3:valid ~ #item8-3:valid ~ #item9-3:valid ~ .crossword-complete {
  opacity: 1;
}

#checkvaliditems {
  background: #9AFF67;
  cursor: pointer;
  position: absolute;
  top: 137px;
  left: 930px;
}

[for=checkvaliditems] {
  padding: 10px 10px 10px 40px;
  margin: 20px;
  display: inline-block;
  background: #9AFF67;
  cursor: pointer;
}

.body{
  background: white;
}

.box {
  position: relative;
  top: 110%;
}
.box::before {
  content: "";
  width: 440px;
  height: 440px;
  background-color: #83da91;
  position: absolute;
  z-index: -1;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  border-radius: 50%;
}
.box-body {
  position: relative;
  height: 200px;
  width: 200px;
  margin-top: 123.3333333333px;
  background-color: #cc231e;
  border-bottom-left-radius: 5%;
  border-bottom-right-radius: 5%;
  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.3);
  background: linear-gradient(#762c2c,#ff0303);
}
.box-body .img{
  opacity: 0;
  ransform: translateY(0%);
  transition: all 0.5s;
  margin: 0 auto;
  display: block;
}
.box-body:hover {
  cursor: pointer;
  -webkit-animation: box-body 1s forwards ease-in-out;
          animation: box-body 1s forwards ease-in-out;
}
.box-body:hover .img{
  opacity: 1;
  z-index: 0;
  transform: translateY(-257px);


   
}
.box-body:hover .box-lid {
  -webkit-animation: box-lid 1s forwards ease-in-out;
          animation: box-lid 1s forwards ease-in-out;
}
.box-body:hover .box-bowtie::before {
  -webkit-animation: box-bowtie-left 1.1s forwards ease-in-out;
          animation: box-bowtie-left 1.1s forwards ease-in-out;
}
.box-body:hover .box-bowtie::after {
  -webkit-animation: box-bowtie-right 1.1s forwards ease-in-out;
          animation: box-bowtie-right 1.1s forwards ease-in-out;
}
.box-body::after {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
          transform: translateX(-50%);
  width: 50px;
  background: linear-gradient(#ffffff,#ffefa0)
}
.box-lid {
  position: absolute;
  z-index: 1;
  left: 50%;
  -webkit-transform: translateX(-50%);
          transform: translateX(-50%);
  bottom: 90%;
  height: 40px;
  background-color: #cc231e;
  height: 40px;
  width: 220px;
  border-radius: 5%;
  box-shadow: 0 8px 4px -4px rgba(0, 0, 0, 0.3);
}
.box-lid::after {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
          transform: translateX(-50%);
  width: 50px;
  background: linear-gradient(#ffefa0,#fff)
}
.box-bowtie {
  z-index: 1;
  height: 100%;
}
.box-bowtie::before, .box-bowtie::after {
  content: "";
  width: 83.3333333333px;
  height: 83.3333333333px;
  border: 16.6666666667px solid white;
  border-radius: 50% 50% 0 50%;
  position: absolute;
  bottom: 99%;
  z-index: -1;
}
.box-bowtie::before {
  left: 50%;
  -webkit-transform: translateX(-100%) skew(10deg, 10deg);
          transform: translateX(-100%) skew(10deg, 10deg);
}
.box-bowtie::after {
  left: 50%;
  -webkit-transform: translateX(0%) rotate(90deg) skew(10deg, 10deg);
          transform: translateX(0%) rotate(90deg) skew(10deg, 10deg);
}

@-webkit-keyframes box-lid {
  0%,
  42% {
    -webkit-transform: translate3d(-50%, 0%, 0) rotate(0deg);
            transform: translate3d(-50%, 0%, 0) rotate(0deg);
  }
  60% {
    -webkit-transform: translate3d(-85%, -230%, 0) rotate(-25deg);
            transform: translate3d(-85%, -230%, 0) rotate(-25deg);
  }
  90%, 100% {
    -webkit-transform: translate3d(-119%, 225%, 0) rotate(-70deg);
            transform: translate3d(-119%, 225%, 0) rotate(-70deg);
  }
}

@keyframes box-lid {
  0%,
  42% {
    -webkit-transform: translate3d(-50%, 0%, 0) rotate(0deg);
            transform: translate3d(-50%, 0%, 0) rotate(0deg);
  }
  60% {
    -webkit-transform: translate3d(-85%, -230%, 0) rotate(-25deg);
            transform: translate3d(-85%, -230%, 0) rotate(-25deg);
  }
  90%, 100% {
    -webkit-transform: translate3d(-119%, 225%, 0) rotate(-70deg);
            transform: translate3d(-119%, 225%, 0) rotate(-70deg);
  }
}
/* ... */

